--- a/index.html
+++ b/index.html
@@ -20,67 +20,61 @@
     </header>
 
     <main>
-        <nav id="character-nav">
-            <ul class="characters">
+        <nav id="team-nav">
+            <ul class="teams">
                 <li>
                     <a href="#lightbox">
                         <div class="sprite"></div>
-                        <div class="red_bumper"></div>
-                        <h5>Captain America</h5>
+                        <div class="blue_bumper"></div>
+                        <input type="checkbox" class="checkbox"><span>Australia</span>
                     </a>
-                    <!-- <img src="images/cap.jpeg" alt="captain america"> -->
                 </li>
 
                 <li>
                     <a href="#lightbox">
-                        <div class="sprite" id="carol"></div>
-                        <div class="red_bumper"></div>
-                        <h5>Captain Marvel</h5>
+                        <div class="sprite" id="canada"></div>
+                        <div class="blue_bumper"></div>
+                        <input type="checkbox" class="checkbox"><span>Canada</span>
                     </a>
-                    <!-- <img src="images/carol.jpeg" alt="captain marvel"> -->
                 </li>
 
                 <li>
                     <a href="#lightbox">
-                    <div class="sprite" id="clint"></div>
-                    <div class="red_bumper"></div>
-                    <h5>Hawkeye</h5>
-                </a>
-                    <!-- <img src="images/clint.jpeg" alt="hawkeye"> -->
+                        <div class="sprite" id="croatia"></div>
+                        <div class="blue_bumper"></div>
+                        <input type="checkbox" class="checkbox"><span>Croatia</span>
+                    </a>
                 </li>
 
                 <li>
                     <a href="#lightbox">
-                        <div class="sprite" id="hulk"></div>
-                        <div class="red_bumper"></div>
-                        <h5>Hulk</h5>
+                        <div class="sprite" id="germany"></div>
+                        <div class="blue_bumper"></div>
+                        <input type="checkbox" class="checkbox"><span>Germany</span>
                     </a>
-                    <!-- <img src="images/hulk.jpeg" alt="hulk"> -->
                 </li>
 
                 <li>
                     <a href="#lightbox2">
-                        <div class="sprite" id="thor"></div>
-                        <div class="red_bumper"></div>
-                        <h5>Thor</h5>
+                        <div class="sprite" id="saudi"></div>
+                        <div class="blue_bumper"></div>
+                        <input type="checkbox" class="checkbox"><span>Saudi Arabia</span>
                     </a>
-                    <!-- <img src="images/thor.jpeg" alt="thor"> -->
                 </li>
 
                 <li>
                     <a href="#lightbox">
-                        <div class="sprite" id="widow"></div>
-                        <div class="red_bumper"></div>
-                        <h5>Black Widow</h5>
+                        <div class="sprite" id="netherlands"></div>
+                        <div class="blue_bumper"></div>
+                        <input type="checkbox" class="checkbox"><span>Netherlands</span>
                     </a>
-                    <!-- <img src="images/widow.jpeg" alt="black widow"> -->
                 </li>
             </ul>
         </nav>
 
         <article>
             <h3>Support Our Teams!</h3>
-            <p>Choose your country to learn more about their World Cup journey.</p>
+            <p>Choose your country to learn more about their Fifa World Cup journey.</p>
         </article>
 
         <section class="lightbox"></section>
