--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </li>
 
                 <li>
-                    <a href="#lightbox">
+                    <a href="#lightbox1">
                         <div class="sprite" id="canada"></div>
                         <div class="blue_bumper"></div>
                         <input type="checkbox" class="checkbox"><span>Canada</span>
@@ -39,7 +39,7 @@
                 </li>
 
                 <li>
-                    <a href="#lightbox">
+                    <a href="#lightbox2">
                         <div class="sprite" id="croatia"></div>
                         <div class="blue_bumper"></div>
                         <input type="checkbox" class="checkbox"><span>Croatia</span>
@@ -47,7 +47,7 @@
                 </li>
 
                 <li>
-                    <a href="#lightbox">
+                    <a href="#lightbox3">
                         <div class="sprite" id="germany"></div>
                         <div class="blue_bumper"></div>
                         <input type="checkbox" class="checkbox"><span>Germany</span>
@@ -55,7 +55,7 @@
                 </li>
 
                 <li>
-                    <a href="#lightbox2">
+                    <a href="#lightbox4">
                         <div class="sprite" id="saudi"></div>
                         <div class="blue_bumper"></div>
                         <input type="checkbox" class="checkbox"><span>Saudi Arabia</span>
@@ -63,7 +63,7 @@
                 </li>
 
                 <li>
-                    <a href="#lightbox">
+                    <a href="#lightbox5">
                         <div class="sprite" id="netherlands"></div>
                         <div class="blue_bumper"></div>
                         <input type="checkbox" class="checkbox"><span>Netherlands</span>
@@ -90,14 +90,82 @@
         <!-- hero image on the left, text on the right -->
         <!-- her image is a background image -->
         <article>
-            <h3 class="lb_heading">Update This</h3>
+            <h3 class="lb_heading">Mathew David Ryan</h3>
             <p class="lb_text">
-                UPDATE THIS
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nostrum autem pariatur dicta eum dolorum nulla neque laborum praesentium quo possimus, mollitia, dolor omnis rerum dolorem ratione in natus? Nihil, mollitia!
-            </p>
+                Mathew David Ryan (born 8 April 1992) is an Australian professional footballer who plays as a goalkeeper for Danish club F.C. Copenhagen and captains the Australia national team.
             <p class="lb_text">
                 UPDATE THIS
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga quaerat totam, unde quam aspernatur quasi delectus sed earum nobis voluptate voluptas suscipit repudiandae explicabo placeat numquam error. Praesentium, quisquam illum.
+            </p>
+        </article>
+    </section>
+
+    <section class="lightbox" id="lightbox1">
+        <a href="" class="lightbox_close">x</a>
+        <!-- hero image on the left, text on the right -->
+        <!-- her image is a background image -->
+        <article>
+            <h3 class="lb_heading">Alphonso Boyle Davies</h3>
+            <p class="lb_text">
+                Alphonso Boyle Davies (born November 2, 2000) is a Canadian professional soccer player who plays as a left-back or winger for Bundesliga club Bayern Munich and the Canada national team. 
+            <p class="lb_text">
+                He is regarded as one of the best full-backs in the world due to his pace, dribbling and creativity.
+            </p>
+        </article>
+    </section>
+
+    <section class="lightbox" id="lightbox2">
+        <a href="" class="lightbox_close">x</a>
+        <!-- hero image on the left, text on the right -->
+        <!-- her image is a background image -->
+        <article>
+            <h3 class="lb_heading">Mateo Kovačić</h3>
+            <p class="lb_text">
+                Mateo Kovačić (Croatian pronunciation: [matěo kǒʋatʃitɕ]; born 6 May 1994) is a Croatian professional footballer who plays as a midfielder for Premier League club Chelsea and the Croatia national team. 
+            <p class="lb_text">
+                He is usually deployed in a central or box-to-box role, but can play in deeper positions. He also adapted to playing either wide on the left or as an attacking midfielder earlier in his career.
+            </p>
+        </article>
+    </section>
+
+    <section class="lightbox" id="lightbox3">
+        <a href="" class="lightbox_close">x</a>
+        <!-- hero image on the left, text on the right -->
+        <!-- her image is a background image -->
+        <article>
+            <h3 class="lb_heading">Jérôme Agyenim Boateng</h3>
+            <p class="lb_text">
+                Jérôme Agyenim Boateng (born 3 September 1988) is a German professional footballer who plays as a centre-back for French Ligue 1 club Lyon.
+            <p class="lb_text">
+                A versatile defender, Boateng primarily is a centre-back, although he can also play as a right-back. Physically strong and composed in possession, he has gained a reputation as a tough-tackling defender, with good passing and an ability to read the game. Despite his talent in his youth, he was initially accused by certain pundits of being error-prone defensively; however, he later came to be considered one of the world's best players in his position.
+            </p>
+        </article>
+    </section>
+
+    <section class="lightbox" id="lightbox4">
+        <a href="" class="lightbox_close">x</a>
+        <!-- hero image on the left, text on the right -->
+        <!-- her image is a background image -->
+        <article>
+            <h3 class="lb_heading">Yahya Sulaiman Ali al-Shehri</h3>
+            <p class="lb_text">
+                Yahya Sulaiman Ali al-Shehri (Arabic: يحيى سليمان علي الشهري; born 26 June 1990) is a Saudi Arabian professional footballer who plays as a left winger for Al-Raed and the Saudi Arabia national team.
+            <p class="lb_text">
+                He was promoted from the youth team of Ettifaq and appeared in the first team in the 2009–10 Saudi Professional League. In 2013, he transferred to Al-Nassr. In 2018, he was loaned to CD Leganés and became one of the nine Saudi players to go play abroad since Osama Hawsawi.
+            </p>
+        </article>
+    </section>
+
+    <section class="lightbox" id="lightbox5">
+        <a href="" class="lightbox_close">x</a>
+        <!-- hero image on the left, text on the right -->
+        <!-- her image is a background image -->
+        <article>
+            <h3 class="lb_heading">Virgil van Dijk</h3>
+            <p class="lb_text">
+                Virgil van Dijk (born 8 July 1991) is a Dutch professional footballer who plays as a centre-back for Premier League club Liverpool and the Netherlands national team. Considered one of the best defenders in the world, Van Dijk is known for his strength, leadership and aerial ability. He is the only defender to win UEFA Men's Player of the Year, and has finished runner-up for the Ballon d'Or and Best FIFA Men's Player.
+            <p class="lb_text">
+                He is the only defender to win UEFA Men's Player of the Year, and has finished runner-up for the Ballon d'Or and Best FIFA Men's Player.
             </p>
         </article>
     </section>
